{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 141,
  "lineage": "e0b55976-983d-7930-ad76-2edfd8bdc35d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sl-prj1-k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:843412311059:instance/i-070d4e52c049942a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070d4e52c049942a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simplilearn_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005963f70cc78ca67",
            "private_dns": "ip-10-1-0-150.ec2.internal",
            "private_ip": "10.1.0.150",
            "public_dns": "ec2-54-197-37-104.compute-1.amazonaws.com",
            "public_ip": "54.197.37.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000fa74d87ceb7cbb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015ac102ff291ad66",
            "tags": {
              "Group": "master",
              "Name": "k8s-master"
            },
            "tags_all": {
              "Group": "master",
              "Name": "k8s-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00202b87394c88cd5"
            ]
          },
          "dependencies": [
            "aws_security_group.sl-prj1-sg-22",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sl-prj1-k8s-worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:843412311059:instance/i-022ac61c02eef7a90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022ac61c02eef7a90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simplilearn_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0734fe031b43fe373",
            "private_dns": "ip-10-1-0-64.ec2.internal",
            "private_ip": "10.1.0.64",
            "public_dns": "ec2-18-208-194-251.compute-1.amazonaws.com",
            "public_ip": "18.208.194.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033e2991dbb1a2e18",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015ac102ff291ad66",
            "tags": {
              "Group": "worker",
              "Name": "k8s-worker1"
            },
            "tags_all": {
              "Group": "worker",
              "Name": "k8s-worker1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00202b87394c88cd5"
            ]
          },
          "dependencies": [
            "aws_security_group.sl-prj1-sg-22",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sl-prj1-k8s-worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0af3577fe5e3532",
            "arn": "arn:aws:ec2:us-east-1:843412311059:instance/i-0f85205c65fb34e21",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f85205c65fb34e21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "simplilearn_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b4e08ad21f6e71b",
            "private_dns": "ip-10-1-0-175.ec2.internal",
            "private_ip": "10.1.0.175",
            "public_dns": "ec2-54-90-253-182.compute-1.amazonaws.com",
            "public_ip": "54.90.253.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073d638d29a6e6bfe",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015ac102ff291ad66",
            "tags": {
              "Group": "worker",
              "Name": "k8s-worker2"
            },
            "tags_all": {
              "Group": "worker",
              "Name": "k8s-worker2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00202b87394c88cd5"
            ]
          },
          "dependencies": [
            "aws_security_group.sl-prj1-sg-22",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sl-prj1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:internet-gateway/igw-01b3ac4e3e20a30f1",
            "id": "igw-01b3ac4e3e20a30f1",
            "owner_id": "843412311059",
            "vpc_id": "vpc-00450179594f1635e"
          },
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sl-prj1-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:route-table/rtb-09676e4184638053b",
            "id": "rtb-09676e4184638053b",
            "owner_id": "843412311059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b3ac4e3e20a30f1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-00450179594f1635e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sl-prj1-igw",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sl-prj1-rta-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be838ac5c5a6cd5f",
            "route_table_id": "rtb-09676e4184638053b",
            "subnet_id": "subnet-015ac102ff291ad66"
          },
          "dependencies": [
            "aws_internet_gateway.sl-prj1-igw",
            "aws_route_table.sl-prj1-rtb-public",
            "aws_subnet.sl-prj1-subnet-public",
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sl-prj1-sg-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:security-group/sg-00202b87394c88cd5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00202b87394c88cd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "843412311059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00450179594f1635e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sl-prj1-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:subnet/subnet-015ac102ff291ad66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-015ac102ff291ad66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843412311059",
            "vpc_id": "vpc-00450179594f1635e"
          },
          "dependencies": [
            "aws_vpc.sl-prj1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sl-prj1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:843412311059:vpc/vpc-00450179594f1635e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01ac46cf9cf57d6b6",
            "default_route_table_id": "rtb-067b3abfa15821171",
            "default_security_group_id": "sg-0019e1328dc1551d8",
            "dhcp_options_id": "dopt-46e78420",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00450179594f1635e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067b3abfa15821171",
            "owner_id": "843412311059"
          }
        }
      ]
    }
  ]
}